# kdev-debugmon

./: CMakeLists.txt  appperf.cpp  appperf.h  debugmonplugin.cpp  debugmonplugin.h  kdevdebugmon.json  kdevdebugmon.rc
ksysguardui/: CMakeLists.txt  ksysguard.cpp
